--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	</div>
 	<div class="copy animated wow bounceInDown" data-wow-duration="1000ms" data-wow-delay="500ms">
-		 <p>Copyright © 2016 Tattoo. All rights reserved | Design by <a href="http://w3layouts.com">W3layouts</a></p>
+		 <p>Copyright © 2016 Tattoo. All rights reserved | Design by Saad</p>
 	</div>
 <!-- //footer -->
 <!-- for bootstrap working -->
